testsuite/tests/deriving/should_fail/T12801.hs
data Container
  = Container [Wibble Int]
  deriving (Eq, Show)

data Wibble a
  = Wibble a
  | Wobble
  deriving (Eq, Functor, Show)
