testsuite/tests/deriving/should_fail/T12801.stderr
T12801.hs:9:17: error: [GHC-86639]
    • Can't make a derived instance of ‘Functor Wibble’:
        You need DeriveFunctor to derive an instance for this class
    • In the data type declaration for ‘Wibble’

